# irata

./: .gitignore  .gitmodules  .replit  Makefile  README.md  go.mod  replit.md  status.md
irata/: .clang-tidy  .gitignore  CMakeLists.txt  Makefile
irata/asm/: asm.yaml  loader.py  schema.json
irata/asm/cpp/: CMakeLists.txt  generate_cpp.py
irata/asm/cpp/include/irata/asm/: asm.hpp  instruction.hpp  instruction_set.hpp
irata/asm/cpp/src/: asm.cpp  instruction.cpp  instruction_set.cpp  irata_instructions.cpp
irata/asm/cpp/test/: instruction_set_test.cpp
irata/assembler/: CMakeLists.txt  assembler.cpp
irata/assembler/include/irata/assembler/: assembler.hpp  byte_encoder.hpp  debug_symbol_emitter.hpp  index.hpp  instruction_binder.hpp  label_binder.hpp  parser.hpp  source_location.hpp
irata/assembler/src/: assembler.cpp  byte_encoder.cpp  debug_symbol_emitter.cpp  index.cpp  instruction_binder.cpp  label_binder.cpp  parser.cpp  source_location.cpp
irata/assembler/test/: assembler_test.cpp  byte_encoder_test.cpp  debug_symbol_emitter_test.cpp  instruction_binder_test.cpp  label_binder_test.cpp  parser_test.cpp
irata/build_nosani/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
irata/build_nosani/asm/: CTestTestfile.cmake  Makefile  cmake_install.cmake
irata/build_nosani/asm/cpp/: CTestTestfile.cmake  Makefile  asm_tests  cmake_install.cmake
irata/build_nosani/assembler/: CTestTestfile.cmake  Makefile  cmake_install.cmake
irata/build_nosani/common/: CTestTestfile.cmake  Makefile  cmake_install.cmake  common_tests
irata/build_nosani/sim/: CTestTestfile.cmake  Makefile  cmake_install.cmake
irata/build_nosani/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
irata/common/: CMakeLists.txt
irata/common/include/irata/common/bytes/: byte.hpp  byte_result.hpp  word.hpp
irata/common/include/irata/common/strings/: strings.hpp
irata/common/src/bytes/: byte.cpp  byte_result.cpp  word.cpp
irata/common/src/strings/: strings.cpp
irata/common/test/bytes/: byte_result_test.cpp  byte_test.cpp  word_test.cpp
irata/common/test/strings/: strings_test.cpp
irata/sim/: CMakeLists.txt  microcode.cpp  microcode_design.md  sim.cpp
irata/sim/include/irata/sim/bytes/: byte.hpp  byte_result.hpp  word.hpp
irata/sim/include/irata/sim/components/: bus.hpp  component.h  component.hpp  control.hpp  counter.hpp  cpu.hpp  irata.hpp  register.hpp  status.hpp  status_register.hpp  word_counter.hpp  word_register.hpp
irata/sim/include/irata/sim/hdl/: alu_decl.hpp  alu_opcode.hpp  bus_decl.hpp  component_decl.hpp  component_type.hpp  component_with_bus_decl.hpp  control_decl.hpp  (+9 more)
irata/sim/src/bytes/: byte.cpp  byte_result.cpp  word.cpp
irata/sim/src/components/: bus.cpp  component.cc  component.cpp  control.cpp  counter.cpp  cpu.cpp  irata.cpp  register.cpp  status.cpp  status_register.cpp  word_counter.cpp  word_register.cpp
irata/sim/src/components/alu/: add.cpp  address_add.cpp  alu.cpp  and.cpp  module.cpp  or.cpp  rotate_left.cpp  rotate_right.cpp  shift_left.cpp  shift_right.cpp  subtract.cpp  xor.cpp
irata/sim/src/components/controller/: complete_statuses.cpp  control_encoder.cpp  controller.cpp  instruction_address_encoder.cpp  instruction_encoder.cpp  instruction_memory.cpp  partial_statuses.cpp  precondition_encoder.cpp  status_encoder.cpp
irata/sim/src/components/memory/: address.cpp  memory.cpp  ram.cpp  region.cpp  rom.cpp
irata/sim/src/hdl/: alu_decl.cpp  alu_opcode.cpp  bus_decl.cpp  component_decl.cpp  component_type.cpp  control_decl.cpp  controller_decl.cpp  cpu_decl.cpp  hdl.cpp  irata_decl.cpp  memory_decl.cpp  register_decl.cpp  status_decl.cpp  status_register_decl.cpp  tick_phase.cpp
irata/sim/src/microcode/compiler/: compiler.cpp
irata/sim/src/microcode/dsl/: instruction.cpp  instruction_set.cpp  irata_instruction_set.cpp  step.cpp
irata/sim/src/microcode/ir/: instruction.cpp  instruction_set.cpp  step.cpp
irata/sim/src/microcode/table/: entry.cpp  table.cpp
irata/sim/test/bytes/: byte_result_test.cpp  byte_test.cpp  word_test.cpp
irata/sim/test/components/: bus_test.cpp  component_test.cc  component_test.cpp  control_test.cpp  counter_test.cpp  cpu_test.cpp  irata_test.cpp  register_test.cpp  status_register_test.cpp  status_test.cpp  word_counter_test.cpp  word_register_test.cpp
irata/sim/test/components/alu/: add_test.cpp  address_add_test.cpp  alu_test.cpp  and_test.cpp  module_test.cpp  or_test.cpp  rotate_left_test.cpp  rotate_right_test.cpp  shift_left_test.cpp  shift_right_test.cpp  subtract_test.cpp  xor_test.cpp
irata/sim/test/components/controller/: complete_statuses_test.cpp  control_encoder_test.cpp  controller_test.cpp  instruction_address_encoder_test.cpp  instruction_encoder_test.cpp  instruction_memory.cpp  instruction_memory_test.cpp  partial_statuses_test.cpp  precondition_encoder_test.cpp  status_encoder_test.cpp
irata/sim/test/components/memory/: address_test.cpp  memory_test.cpp  ram_test.cpp  region_test.cpp  rom_test.cpp
irata/sim/test/hdl/: alu_decl_test.cpp  bus_decl_test.cpp  component_decl_test.cpp  component_type_test.cpp  control_decl_test.cpp  controller_decl_test.cpp  cpu_decl_test.cpp  fake_component_decl_test.cpp  hdl_test.cpp  irata_decl_test.cpp  memory_decl_test.cpp  register_decl_test.cpp  status_decl_test.cpp  status_register_decl_test.cpp  tick_phase_test.cpp
irata/sim/test/microcode/compiler/: compiler_test.cpp
irata/sim/test/microcode/dsl/: instruction_set_test.cpp  instruction_test.cpp  step_test.cpp
irata/sim/test/microcode/hdl/: hdl_test.cpp
irata/sim/test/microcode/ir/: instruction_set_test.cpp  instruction_test.cpp  step_test.cpp
irata/sim/test/microcode/table/: entry_test.cpp
irata/test/: CMakeLists.txt  adc.asm  adc_imm.asm  and.asm  asl.asm  dex.asm  dey.asm  eor.asm  hlt.asm  inx.asm  iny.asm  jeq.asm  jmp.asm  jsr.asm  lda.asm  ldx.asm  ldy.asm  lsr.asm  nop.asm  ora.asm  pha.asm  php.asm  phx.asm  phy.asm  pla.asm  plp.asm  plx.asm  ply.asm  rol.asm  ror.asm  sbc.asm  sta.asm  stx.asm  sty.asm  tax.asm  tay.asm  txa.asm  tya.asm
(+80 files in other folders)
