file(GLOB_RECURSE SRCS CONFIGURE_DEPENDS "src/*.cpp")
file(GLOB_RECURSE HDRS CONFIGURE_DEPENDS "include/*.hpp")
add_library(irata_assembler ${SRCS} ${HDRS})
target_include_directories(irata_assembler PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_link_libraries(irata_assembler PUBLIC irata_asm irata_common)
target_link_libraries(irata_assembler PRIVATE irata_build_flags)

file(GLOB_RECURSE TEST_SRCS CONFIGURE_DEPENDS "test/*.cpp")
file(GLOB_RECURSE TEST_HDRS CONFIGURE_DEPENDS "test/include/*.hpp")
add_executable(assembler_tests ${TEST_SRCS} ${TEST_HDRS})
target_include_directories(assembler_tests PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/test/include)
target_link_libraries(assembler_tests PUBLIC irata_assembler irata_sim irata_asm irata_common gtest gmock gtest_main)
target_link_libraries(assembler_tests PRIVATE irata_build_flags)
add_test(NAME assembler_tests COMMAND assembler_tests)

add_executable(assembler ${CMAKE_CURRENT_SOURCE_DIR}/assembler.cpp)
target_link_libraries(assembler PUBLIC irata_assembler irata_sim irata_asm irata_common)
target_link_libraries(assembler PRIVATE irata_build_flags)